# pattern

./: .clang-format  .gitignore  CMakeLists.txt  README.md
TestSuite/: CMakeLists.txt
TestSuite/TestBehavioral/: CMakeLists.txt
TestSuite/TestBehavioral/doc/: Doxyfile.in
TestSuite/TestBehavioral/doc/AdditionalDocuments/: DoxygenLayout.xml
TestSuite/TestCreational/: CMakeLists.txt
TestSuite/TestRegression/: CMakeLists.txt
TestSuite/TestStructural/: CMakeLists.txt
TestSuite/TestStructural/doc/AdditionalDocuments/: headerFile
TestSuite/src/: logger_spd_juce.h  main.cpp
doc/: Doxyfile.in
doc/AdditionalDocuments/: DoxygenLayout.xml
doc/CleanCode/: CodeHeuristics.md  CodingGuidelines.md  Structure.md  TestDrivenDevelopment.md  TestSuite.md
install_files/: documentation.html
modules/: CMakeLists.txt
modules/pattern_base/: pattern_base.cpp  pattern_base.h
modules/pattern_behavioral/: pattern_behavioral.cpp  pattern_behavioral.h
modules/pattern_creational/: pattern_creational.cpp  pattern_creational.h
modules/pattern_creational/builder/: builder.hpp  builderProduct.hpp  builderUnittest.cpp  director.hpp
modules/pattern_creational/factory/: factory.cpp  factory.h  factoryUnittest.cpp  productInterface.hpp
modules/pattern_creational/prototype/: prototype.hpp  prototypeUnittest.cpp
modules/pattern_creational/singleton/: singleton.cpp  singleton.h  singletonUnittest.cpp
modules/pattern_structural/: pattern_structural.cpp  pattern_structural.h
modules/pattern_structural/adapter/: adapter.hpp  adapterUnittest.cpp
modules/pattern_structural/bridge/: bridge.h  bridgeUnittest.cpp
